--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "cypress": "^15.5.0",
+    "cypress-plugin-api": "^2.11.2"
   }
 }
