--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,33 @@
 name: CI dls-games-api
 
-#gatilhos
 on:
   workflow_dispatch:
 
 jobs:
-  tests: 
-
+  tests:
     runs-on: ubuntu-latest
 
-    env: 
+    env:
+      API_BASE_URL: 'http://localhost:3000'
+      PORT: 3000
+      
+    steps:
+      - name: Checkout in repository
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install swagger and jwt
+        run: npm install express swagger-ui-express jsonwebtoken
+
+      - name: Execute project
+        run: node app.js &
+
+      - name: Execute tests
+        run: npx cypress run
+      
+      
+      
       
 
